@@ -47,8 +47,7 @@ public class GtkWindowPeer extends GtkContainerPeer
   implements WindowPeer
 {
   static protected final int GTK_WINDOW_TOPLEVEL = 0;
-  static protected final int GTK_WINDOW_DIALOG = 1;
-  static protected final int GTK_WINDOW_POPUP = 2;
+  static protected final int GTK_WINDOW_POPUP = 1;
 
   native void create (int type);
 
