@@ -1,3 +1,8 @@
+2003-08-22  Thomas Fitzsimmons  <fitzsim@redhat.com>
+
+	* gnu/java/awt/peer/gtk/GtkWindowPeer.java: Remove
+	GTK_WINDOW_DIALOG.  Set GTK_WINDOW_POPUP to 1.
+
 2003-08-21  David Daney  <ddaney@avtrex.com>
 
 	Fix for PR libgcj/12013:
